@@ -1,3 +1,5 @@
+[B]1.0.3:[/B]
+- migrace na ContentProvider API
 [B]1.0.2:[/B]
 - přidaná možnost stahování
 - přidaná možnost volby kvality videa
